# ChatRWKV

./: .gitignore  .gitmodules  API_DEMO.py  API_DEMO_CHAT.py  API_DEMO_WORLD.py  DEMO_FOR_STOPWORDS.py  README.md  README_quantize.md  RWKV_in_150_lines.py  RWKV_v5_demo.py  RWKV_v6_demo.py  RWKV_v6_demo_cuda_bf16.py  benchmark-all.py  benchmark.py  chat.py  install-cn.ps1  install.ps1  requirements-quantize.txt  requirements.txt  run.ps1  run_inference_bench.sh  run_lm_eval.py  rwkv_state_merger.py
config/: default.yaml
cpp/: rwkv.cpp  rwkv.py  setup.py
demo/: .gitignore
demo/client/: CMakeLists.txt  README.md  main.cpp
demo/client/qml/: Chat.qml  ChatItemBase.qml  ChatItemText.qml  ChatLable.qml  ChatList.qml  CursorDelegate.qml  CustomButton.qml  CustomImage.qml  CustomSlider.qml  CustomText.qml  InteractiveWindow.qml  Main.qml  MultipleLineInput.qml  NewChatButton.qml  NumberInput.qml  Style.js  Writing.qml  qml.qrc
demo/client/resource/: images.qrc
demo/client/source/: CMakeLists.txt  ChatListDefine.h  ChatListModel.cpp  ChatListModel.h  ChatNetworkRequest.cpp  ChatNetworkRequest.h  InteractiveMain.cpp  InteractiveMain.h
demo/client/tools/: build_windows.bat  win_package.bat  win_replace_icon.bat  win_setup.iss
docker/: Dockerfile  convert.mini.py  convert.py  webui.mini.py  (+1 more)
rwkv_pip_package/: MANIFEST.in  README.md  pyproject.toml
rwkv_pip_package/src/rwkv/: model.py  rwkv_tokenizer.py  utils.py
rwkv_pip_package/src/rwkv/cuda/: att_one.cu  att_one_v5.cu  att_seq.cu  element_wise.h  ffn.cu  ffn_seq.cu  gemm_cublas.cpp  gemm_fp16_cublas.cpp  gemv.cuh  operators.cu  rwkv5.cu  rwkv5_op.cpp  rwkv6.cu  rwkv6_op.cpp  rwkv7_op.cpp  util.cuh  util.h  wkv7s.cu  wkv_cuda.cu  wkv_forward_one.cu  wkv_forward_one.cuh  wkv_op.cpp  wrapper.cpp
rwkv_pip_package/src/rwkv/rwkv_utils/: penalty.py  pipeline.py  tokenizer.py
(+73 files in other folders)
