[project]
name = "rwkv"
version = "0.7.3"
authors = [
  { name="Bo PENG" },
]
description = "The RWKV Language Model"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
  'tokenizers >= 0.13.2',
]

[project.urls]
"Homepage" = "https://github.com/BlinkDL/ChatRWKV"
"Bug Tracker" = "https://github.com/BlinkDL/ChatRWKV/issues"
